--- a/2DCollisionOOP/2DCollisionOOP.csproj
+++ b/2DCollisionOOP/2DCollisionOOP.csproj
@@ -41,12 +41,13 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Block.cs" />
+    <Compile Include="Sprites\Block.cs" />
     <Compile Include="Game1.cs" />
-    <Compile Include="Person.cs" />
+    <Compile Include="Sprites\Person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Sprite.cs" />
+    <Compile Include="Sprites\Sprite.cs" />
+    <Compile Include="Timer.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
