--- a/2DCollisionOOP/2DCollisionOOP.csproj
+++ b/2DCollisionOOP/2DCollisionOOP.csproj
@@ -41,6 +41,9 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Collision\ICollision.cs" />
+    <Compile Include="Collision\PerPixelCollision.cs" />
+    <Compile Include="Collision\RectangleCollision.cs" />
     <Compile Include="Sprites\Block.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Sprites\Person.cs" />
