--- a/2DCollisionOOP/2DCollisionOOP.csproj
+++ b/2DCollisionOOP/2DCollisionOOP.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Sprites\Person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sprites\Shield.cs" />
     <Compile Include="Sprites\Sprite.cs" />
     <Compile Include="Timer.cs" />
   </ItemGroup>
