--- a/2DCollisionOOP.Test/2DCollisionOOP.Test.csproj
+++ b/2DCollisionOOP.Test/2DCollisionOOP.Test.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\2DCollisionOOP\2DCollisionOOP.csproj" />
+  </ItemGroup>
+
 </Project>
