--- a/2DCollisionOOP.Test/2DCollisionOOP.Test.csproj
+++ b/2DCollisionOOP.Test/2DCollisionOOP.Test.csproj
@@ -16,4 +16,10 @@
     <ProjectReference Include="..\2DCollisionOOP\2DCollisionOOP.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="MonoGame.Framework">
+      <HintPath>..\..\..\Program Files (x86)\MonoGame\v3.0\Assemblies\Windows\MonoGame.Framework.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
